# Simula

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONFIG.md  LICENSE  README.md  SKILL.md  TODO.md  data_viewer.html  monitor.py  pipeline_explainer.html  pyproject.toml  taxonomy_viewer.html  testing-notes.md
examples/: basic_qa.yaml  cat_stories_freetext.yaml  ecommerce_search_extraction.yaml  ecommerce_search_extraction_prompts.py  job_extraction.yaml  job_extraction_prompts.py  query_extraction_gemini.yaml  template.yaml
notes/: CHANGELOG.md  testing-notes.md
simula/: __init__.py  cli.py  data_models.py  diversity.py  prompts.py
syndata/: cli.py  config.py  console.py  cost.py  data_models.py  diversity.py  evaluate.py  generate.py  models.py  prompts.py  tasks.py  taxonomy.py  utils.py
tests/: test_config.py  test_diversity.py  test_evaluate.py  test_models.py  test_pipeline.py  test_utils.py
viz-tooling/: README.md  pipeline_explainer.html
